fix z-index of popzy__backdrop

--- a/popzy.css
+++ b/popzy.css
@@ -12,6 +12,7 @@
 
 .popzy__backdrop {
     position: fixed;
+    z-index: 999;
     background: rgba(0, 0, 0, 0.6);
     inset: 0;
     display: flex;
